fixed home page spacing

--- a/foxyspizza/styles/styles.css
+++ b/foxyspizza/styles/styles.css
@@ -119,42 +119,50 @@ nav {
 /* right home */
 
 .right-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  margin: 65px 10px;
 }
 
 .title-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 60px;
+  position: absolute;
+  top: 200px;
+  margin: 42px;
 }
 
 .title-wrapper h2 {
-    padding: 8px 15px;
-    position: fixed;
-    top: 230px;
-    background: var(--vermilion);
-    color: var(--nav-hover-link-color);
+  padding: 8px 15px;
+  position: absolute;
+  top: -92px;
+  background: var(--vermilion);
+  color: var(--nav-hover-link-color);
 }
 
 .title-wrapper h1 {
-    border-radius: 15px;
-    padding: 30px 80px;
-    font-size: 2em;
-    background: var(--smalt);
-    color: white;
-    width: 370px;
+  border-radius: 15px;
+  padding: 30px 80px;
+  font-size: 2em;
+  background: var(--smalt);
+  color: white;
+  width: 370px;
+  position: absolute;
+  z-index: -1;
 }
 
 .mission {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 100px;
 }
 
 .mission img {
@@ -557,6 +565,38 @@ footer i {
   grid-template-columns: 1fr 1fr;
   place-items: center;
   padding: 0px 50px;
+}
+
+.message-us {
+  background-color: var(--smalt);
+  color: white;
+  font-size: 1.2em;
+}
+
+.message-us h2 {
+  color: white;
+}
+
+.message-us input{
+  margin: 15px 0px;
+  outline: none;
+  border: none;
+  border-bottom: 2px solid var(--accent1-color);
+  background-color: transparent;
+  color: white;
+  font-size: 1.2em;
+}
+
+label {
+  color: white;
+}
+
+textarea {
+  height: 40%;
+  width: 120%;
+  padding: 18px;
+  resize: none;
+  outline: none;
 }
 
 .contact-card-container section, iframe {
